[bin] Fix part roll on mobile

--- a/public/bin/landing-new/style.css
+++ b/public/bin/landing-new/style.css
@@ -197,7 +197,7 @@
 .spinner-item {
     width: 100%;
     height: 100%;
-    aspect-ratio: 1;
+    /* aspect-ratio: 1; */
     padding: 15px;
     box-sizing: border-box;
     background-color: #D9D9D9;
